--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@ Objective of Business communication-
 <br><br><br><br>
 		<h4>Related Videos</h4>
 	<video controls width="600" height="400">
-		<source src="https://youtu.be/fyzmCU931QE">
+		<source src="https://youtube.com/fyzmCU931QE">
 		your browser not support this format
 		</video>
 <br><br><br><br><br>
