--- a/Index.html
+++ b/Index.html
@@ -77,8 +77,7 @@ Objective of Business communication-
 	<footer align="right">
 		email-discovernew@dscover.com<br>
 		phone-(+91)8978768788<br>
-	©copyright| All rights reserved
+	<p><span color="Red">Disclaimer</span>:website under development/created for fun purpose</p>
 </footer>
-</left>
   </body>
 	     </html>
