--- a/Index.html
+++ b/Index.html
@@ -64,10 +64,8 @@ Objective of Business communication-
 </div>
 <br><br><br><br>
 		<h4>Related Videos</h4>
-	<video controls width="600" height="400">
-		<source src="https://youtube.com/fyzmCU931QE">
-		your browser not support this format
-		</video>
+	<iframe width="420" height="345" src="https://www.youtube.com/embed/fyzmCU931QE">
+</iframe>
 <br><br><br><br><br>
 	<center>
 	<i>Thank you!</i>
@@ -77,7 +75,8 @@ Objective of Business communication-
 	<footer align="right">
 		email-discovernew@dscover.com<br>
 		phone-(+91)8978768788<br>
-	<p><span color="Red">Disclaimer</span>:website under development/created for fun purpose</p>
+	<p><span style="color: Red;">Disclaimer</span>:website under development/created for fun purpose only
+Information give above are all based on our research and true.</p>
 </footer>
   </body>
 	     </html>
